# Papy

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: linux-clang.yml  linux-gcc.yml  windows-mingw.yml
benchmarks/: README.md  benchmark_linux.sh  benchmark_windows.bat  nodejs_server.js
src/: apiClient.cpp  apiClient.hpp  cliHelper.cpp  cliHelper.hpp  configPayload.cpp  configPayload.hpp  keyMapping.cpp  keyMapping.hpp  lighthouseBuilder.cpp  lighthouseBuilder.hpp  main.cpp  mapping.cpp  mapping.hpp  matchBuilder.cpp  matchBuilder.hpp  millisecondClock.cpp  millisecondClock.hpp  myRandom.cpp  myRandom.hpp  oceanBuilder.cpp  oceanBuilder.hpp  threadWorks.cpp  threadWorks.hpp
